# tg-bot-logger

./: .env.example  .gitignore  CLAUDE.md  MODELS.md  OPENROUTER_MODELS.md  README.md  TOOLS.md  admin.py  bot.py  jobs.py  llm_router.yaml  pyproject.toml  split.py
agents/: README.md  models.yaml
agents/directives/: coach.md  llm_assistant.md
agents/directives/skills/: coach.md  db_analyst.md  research.md  (+1 more)
agents/execution/: README.md
agents/orchestration/: README.md
agents/tools/: README.md
docs/: CHAT_SUMMARY_V3.md  V3_PLAN.md
src/tg_time_logger/: __init__.py  admin_app.py  commands_coach.py  commands_core.py  commands_help.py  commands_llm.py  commands_quests.py  commands_settings.py  commands_shared.py  commands_shop.py  commands_todo.py  config.py  db.py  db_constants.py  db_converters.py  db_models.py  duration.py  economy.py  gamification.py  help_guides.py  i18n.py  jobs_runner.py  llm_messages.py  llm_parser.py  llm_router.py  llm_tiers.py  main.py  messages.py  notion_backup.py  quests.py  savings.py  service.py  shop.py  shop_pricing.py  telegram_bot.py  time_utils.py
tests/: test_admin_config.py  test_agent_data_tools.py  test_agents_v3.py  test_coach.py  test_duration.py  test_economy.py  test_economy_job_logic.py  test_economy_rebalance.py  test_help_guides.py  test_i18n.py  test_intent_router.py  test_jobs.py  test_llm_quest_generation.py  test_llm_router.py  test_llm_tiers.py  test_menu_flow.py  test_messages.py  test_notion_backup.py  test_quests_v2.py  test_shop_pricing.py  test_skills.py  test_time_utils.py  test_todo.py  test_v2_logic.py
(+47 files in other folders)
